--- a/Makefile.toml
+++ b/Makefile.toml
@@ -582,6 +582,40 @@ else
     end
 endif
 
+if eq ${os} mac
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtBluetooth.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtConcurrent.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtDBus.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtDesigner.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtDesignerComponents.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtGamepad.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtHelp.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtNfc.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtPrintSupport.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtRemoteObjects.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtScxml.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtSerialBus.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtSerialPort.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtSql.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtTextToSpeech.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtXml.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtXmlPatterns.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtTest.framework/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/lib/QtQuickTest.framework/
+
+    rm -r lib/python3.9/site-packages/PySide2/Qt/plugins/qmltooling/
+    rm -r lib/python3.9/site-packages/PySide2/Qt/plugins/webview/
+
+    rm lib/python3.9/lib-dynload/_testcapi.cpython-39-darwin.so
+    rm lib/python3.9/lib-dynload/xxlimited.cpython-39-darwin.so
+
+    rm -r lib/python3.9/config-3.9-darwin/
+    rm -r lib/python3.9/venv/
+
+    rm -r lib/pkgconfig/
+    rm -r lib/thread2.8.5/
+endif
+
 py_internal_libs = array Lib/email Lib/distutils Lib/http Lib/multiprocessing Lib/msilib Lib/http Lib/dbm Lib/curses Lib/xml Lib/xmlrpc Lib/urllib Lib/ensurepip Lib/venv Lib/wsgiref Lib/lib2to3
 
 for name in ${py_internal_libs}
@@ -688,6 +722,9 @@ contents_resources_dir = get_env CONTENTS_RESOURCES_DIR
 contents_resources_dir = set ${contents_dir}/${contents_resources_dir}
 info_plist_path = get_env INFO_PLIST_PATH
 icns_path = get_env ICNS_PATH
+version_path = get_env VERSION_PATH
+version = readfile ${version_path}
+version = trim_end ${version}
 
 if is_path_exists ${tmp_dir}
   rm -r ${tmp_dir}
@@ -698,6 +735,7 @@ mkdir ${contents_mac_os}
 exec --fail-on-error cp -r py39-dist "${contents_resources_dir}"
 exec --fail-on-error mv ./${contents_resources_dir}/${app_original_name} "./${contents_mac_os}/${app_file_prefix}"
 cp ./${info_plist_path} ./${contents_dir}/Info.plist
+exec --fail-on-error sed -i s/@@VERSION@@/${version}/g ./${contents_dir}/Info.plist
 mkdir ${contents_resources_dir}
 cp ${icns_path} ./${contents_resources_dir}/${app_file_prefix}.icns
 '''
