--- a/Makefile.toml
+++ b/Makefile.toml
@@ -910,7 +910,17 @@ args = ["test", "--features", "tests", "${@}", "--", "--nocapture"]
 dependencies = ["store-version", "copy-capnp"]
 command = "cargo"
 cwd = "console_backend"
-args = ['test', '--package', 'console-backend', '--lib', '--all-features', '--', '${RUST_TEST_FILTER}', '--exact', '--nocapture']
+args = [
+  'test',
+  '--package',
+  'console-backend',
+  '--lib',
+  '--all-features',
+  '--',
+  '${RUST_TEST_FILTER}',
+  '--exact',
+  '--nocapture',
+]
 
 [tasks.rust-type-check]
 dependencies = ["store-version", "copy-capnp"]
