bug roll-up [CPP-732][CPP-741][CPP-735][CPP-734][CPP-731][CPP-466] (#597)
Fixes:

    Don't abbreviate "WARN", use "WARNING" instead
    Fix-up description for "NTRIP enable" settings
    Advanced system monitor: add units to stack column, format CPU usage with at least one decimal always
    Change plot axis to not use bold fonts
    Format network tx/rx bytes as float so that fractional information is maintained

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -906,6 +906,22 @@ command = "cargo"
 cwd = "console_backend"
 args = ["test", "--features", "tests", "${@}", "--", "--nocapture"]
 
+[tasks.rust-tests-filter]
+dependencies = ["store-version", "copy-capnp"]
+command = "cargo"
+cwd = "console_backend"
+args = [
+  'test',
+  '--package',
+  'console-backend',
+  '--lib',
+  '--all-features',
+  '--',
+  '${RUST_TEST_FILTER}',
+  '--exact',
+  '--nocapture',
+]
+
 [tasks.rust-type-check]
 dependencies = ["store-version", "copy-capnp"]
 command = "cargo"
