--- a/Makefile.toml
+++ b/Makefile.toml
@@ -91,18 +91,13 @@ set_env PYTHON_FILES ${py_files}
 command = "rustup"
 args = ["update", "stable"]
 
-[tasks.taplo-cli-update]
-install_crate = { crate_name = "taplo-cli", binary = "taplo", test_arg = [
-  "--help",
-], version = "0.6.0" }
-
 [tasks.cargo-make-deps-update]
-dependencies = ["rustup-update", "taplo-cli-update"]
+dependencies = ["rustup-update"]
 install_crate = { crate_name = "cargo-update", binary = "cargo-install-update", test_arg = [
   "-V",
 ], min_version = "7.0.1" }
 command = "cargo"
-args = ["install-update", "cargo-make"]
+args = ["install-update", "taplo-cli", "cargo-make"]
 
 [tasks.generate-common-constants-rs]
 script_runner = "@duckscript"
@@ -963,16 +958,6 @@ alias = "python-format-all"
 dependencies = ["set-python-files"]
 command = "${PYTHON}"
 args = ["-m", "pylint", "--output-format=parseable", "@@split(PYTHON_FILES, )"]
-
-[tasks.format-toml]
-description = "Formats all toml files defined in the CARGO_MAKE_FORMAT_TOML_FILES environment variable."
-category = "Development"
-condition = { env_set = ["CARGO_MAKE_FORMAT_TOML_FILES"] }
-install_crate = { crate_name = "taplo-cli", binary = "taplo", version = "0.6.0", test_arg = [
-  "--help",
-] }
-command = "taplo"
-args = ["format", "${CARGO_MAKE_FORMAT_TOML_FILES}"]
 
 [tasks.toml-format-check]
 # Note format-toml task is defined by cargo-make to use crate taplo-cli, but the version is
